--- a/requests-json-nlp.ipynb
+++ b/requests-json-nlp.ipynb
@@ -44,11 +44,16 @@
     }
    ],
    "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "import requests\n",
     "import json\n",
     "import pickle\n",
     "\n",
-    "result = json.loads(requests.get('https://api.lyrics.ovh/v1/They Might Be Giants/Birdhouse in your soul').text)\n",
+    "\n",
+    "result = json.loads(requests.get('https://api.lyrics.ovh/v1/').text)\n",
     "\n",
     "response = requests.get('https://www.last.fm/music/blink-182/_/Adam%27s+Song/+lyrics')\n",
     "response = requests.get('https://www.musixmatch.com/lyrics/blink-1/all-the-small-things')\n",
