--- a/requests-json-nlp.ipynb
+++ b/requests-json-nlp.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -38,27 +38,46 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrequests\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mjson\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpickle\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[30], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrequests\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mjson\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_lyrics\u001b[39m(artist, song):\n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'requests'"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "import requests\n",
     "import json\n",
-    "import pickle\n",
     "\n",
+    "def get_lyrics(artist, song):\n",
+    "    \"\"\"Get the lyrics for a song by an artist.\n",
     "\n",
-    "result = json.loads(requests.get('https://api.lyrics.ovh/v1/').text)\n",
+    "    Args:\n",
+    "        artist (str): The name of the artist.\n",
+    "        song (str): The name of the song.\n",
     "\n",
-    "response = requests.get('https://www.last.fm/music/blink-182/_/Adam%27s+Song/+lyrics')\n",
-    "response = requests.get('https://www.musixmatch.com/lyrics/blink-1/all-the-small-things')\n",
-    "response = requests.get('https://www.musixmatch.com/lyrics/blink-1/i-miss-you')\n",
-    "response = requests.get('https://www.musixmatch.com/lyrics/blink-1/edging')\n"
+    "    Returns:\n",
+    "        dict: The lyrics of the song.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    url = \"https://api.lyricsovh.com/v1/search\"\n",
+    "    params = {\n",
+    "        \"q\": f\"{artist} {song}\",\n",
+    "    }\n",
+    "    response = requests.get(url, params=params)\n",
+    "    response.raise_for_status()\n",
+    "    data = response.json()\n",
+    "    if not data:\n",
+    "        return None\n",
+    "    lyrics = data[\"lyrics\"]\n",
+    "    return lyrics\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    songs = [\"i miss you\", \"all the small things\", \"adams song\"]\n",
+    "    lyrics = {}\n",
+    "    for song in songs:\n",
+    "        lyrics[song] = get_lyrics(\"blink-182\", song)\n",
+    "\n",
+    "    with open(\"lyrics.json\", \"w\") as f:\n",
+    "        json.dump(lyrics, f)"
    ]
   },
   {
@@ -74,13 +93,14 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'spacy'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mRunning cells with '.env' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'c:/Users/14029/Desktop/Mod4-JSON-and-NLP/.env/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mjson\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mspacy\u001b[39;00m \u001b[39mimport\u001b[39;00m TextBlob\n\u001b[0;32m      4\u001b[0m \u001b[39m# Read the contents of the file\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39msong.json\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f:\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'spacy'"
      ]
     }
    ],
