--- a/requests-json-nlp.ipynb
+++ b/requests-json-nlp.ipynb
@@ -140,21 +140,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'requests'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mRunning cells with '.env' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'c:/Users/14029/Desktop/Mod4-JSON-and-NLP/.env/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrequests\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_song_lyrics\u001b[39m(artist, song, filename):\n\u001b[0;32m      4\u001b[0m \u001b[39m  \u001b[39m\u001b[39m\"\"\"Gets the lyrics for a song from the lyrics.ovh API and writes them to a file.\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \n\u001b[0;32m      6\u001b[0m \u001b[39m  Args:\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[39m    filename: The filename to write the lyrics to.\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[39m  \"\"\"\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'requests'"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "import requests\n",
+    "\n",
+    "def get_song_lyrics(artist, song, filename):\n",
+    "  \"\"\"Gets the lyrics for a song from the lyrics.ovh API and writes them to a file.\n",
+    "\n",
+    "  Args:\n",
+    "    artist: The name of the artist.\n",
+    "    song: The name of the song.\n",
+    "    filename: The filename to write the lyrics to.\n",
+    "  \"\"\"\n",
+    "\n",
+    "  url = \"https://api.lyricsovh.com/v1/lyrics\"\n",
+    "  params = {\n",
+    "    \"artist\": artist,\n",
+    "    \"title\": song,\n",
+    "  }\n",
+    "\n",
+    "  response = requests.get(url, params=params)\n",
+    "\n",
+    "  if response.status_code == 200:\n",
+    "    lyrics = response.json()[\"lyrics\"]\n",
+    "    with open(filename, \"w\") as f:\n",
+    "      f.write(lyrics)\n",
+    "  else:\n",
+    "    print(f\"Error getting lyrics for {artist} - {song}: {response.status_code}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "  get_song_lyrics(\"Blink182\", \"Adams Song\", \"adams_song.txt\")\n",
+    "  get_song_lyrics(\"Blink182\", \"All the Small Things\", \"all_the_small_things.txt\")\n",
+    "  get_song_lyrics(\"Blink182\", \"I Miss You\", \"i_miss_you.txt\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,21 +197,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'spacy'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mRunning cells with '.env' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'c:/Users/14029/Desktop/Mod4-JSON-and-NLP/.env/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mspacy\u001b[39;00m\n\u001b[0;32m      3\u001b[0m nlp \u001b[39m=\u001b[39m spacy\u001b[39m.\u001b[39mload(\u001b[39m\"\u001b[39m\u001b[39men_core_web_sm\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      5\u001b[0m song_lyrics \u001b[39m=\u001b[39m \u001b[39m\"\"\"\u001b[39m\n\u001b[0;32m      6\u001b[0m \u001b[39mI\u001b[39m\u001b[39m'\u001b[39m\u001b[39mm so happy\u001b[39m\n\u001b[0;32m      7\u001b[0m \u001b[39mI could burst\u001b[39m\n\u001b[0;32m      8\u001b[0m \u001b[39mI\u001b[39m\u001b[39m'\u001b[39m\u001b[39mm so happy\u001b[39m\n\u001b[0;32m      9\u001b[0m \u001b[39mI could cry\u001b[39m\n\u001b[0;32m     10\u001b[0m \u001b[39m\"\"\"\u001b[39m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'spacy'"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "import spacy\n",
+    "\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "song_lyrics = \"\"\"\n",
+    "I'm so happy\n",
+    "I could burst\n",
+    "I'm so happy\n",
+    "I could cry\n",
+    "\"\"\"\n",
+    "\n",
+    "document = nlp(song_lyrics)\n",
+    "\n",
+    "polarity = document.sentiment.polarity\n",
+    "\n",
+    "print(polarity)"
+   ]
   }
  ],
  "metadata": {
